kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  type: NodePort
  selector:
    app: django-blog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
