kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
spec:
  rules:
  - host: suraj-kaul.com
    http: 
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service
              port:
                number: 80
